# mdka-rs

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cargo-publish.sh  pyproject.toml  version.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yaml  feature_request.md  feature_request.yml  question.yml
.github/workflows/: docs.yaml  release-executable.yaml  release-npm.yaml  release-pypi.yaml  release.yaml  release.yml  rust.yml
.github/workflows/scripts/: install-rust.sh  make-release-asset.sh
benches/: bench_common.rs  benchmark.rs  convert.rs  memory.rs  parallel.rs  scaling.rs
benches/benchdata/: deep_nest.html  flat.html  large.html  malformed.html  medium.html  scale_500k.html  scale_50k.html  small.html
cli/: Cargo.toml
cli/src/: main.rs
docs/: BINDINGS_FOR_PYTHON.md  book.toml  executable.md  functions.md
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: core.md  elements.md  errors.md  index.md  modes.md  options.md  text-processing.md
docs/src/benchmarks/: results.md
docs/src/design/: architecture.md  features.md  performance-characteristics.md  performance.md  philosophy.md
docs/src/getting-started/: installation.md  usage-cli.md  usage-nodejs.md  usage-python.md  usage-rust.md  usage.md
examples/: measure_mem.rs  quick_bench.rs  quick_compare.rs  quick_mem.rs  trial.rs
napi/: DEVELOPMENT.md  README.md  index.d.ts  index.js  package-lock.json  package.json  version.sh
napi/__test__/: index.spec.mjs
napi/darwin-arm64/: README.md  package.json
napi/linux-x64-gnu/: package.json
napi/scripts/: runner.js
napi/win32-x64-msvc/: package.json
node/: Cargo.toml  README.md  build.rs  example.mjs  index.d.ts  index.js  package-lock.json  package.json  test.js
node/darwin-arm64/: package.json
node/linux-x64-gnu/: README.md  package.json
node/src/: lib.rs
node/win32-x64-msvc/: README.md  package.json
python/: Cargo.toml  README.md  example.py  pyproject.toml  test_mdka.py
python/mdka/: __init__.py
python/src/: lib.rs
src/: alloc_counter.rs  lib.rs  main.rs  nodejs_bindings.rs  options.rs  preprocessor.rs  python_bindings.rs  renderer.rs  traversal.rs  utils.rs
src/components/: element.rs  mod.rs  node.rs
src/elements/: consts.rs  element.rs  mod.rs  types.rs  util.rs  utils.rs
src/elements/tags/: general_purpose.rs  heading.rs  link.rs  list.rs  media.rs  mod.rs  preformatted.rs  table.rs  text_content.rs
src/nodes/: mod.rs  node.rs  util.rs  utils.rs
src/preprocessor/: tests.rs
src/traversal/: tests.rs
src/utils/: element.rs  file.rs  mod.rs  node.rs  tests.rs
tests/: block_elements.rs  common.rs  compat.rs  file_conversion.rs  inline_elements.rs  robustness.rs  test.rs
tests/fixtures/: simple-01.html
tests/utils/: preprocessor.rs
tests/utils/preprocessor/: tests.rs
