[package]
name = "mdka"
version = "1.4.5"
edition = "2021"

description = "HTML to Markdown converter"
authors = ["nabbisen <nabbisen@scqr.net>"]
license = "Apache-2.0"
categories = ["development-tools", "parsing", "parser-implementations"]
keywords = ["html", "markdown", "parser", "conversion"]
repository = "https://github.com/nabbisen/mdka-rs"
readme = "README.md"

rust-version = "1.74.0"

[lib]
name = "mdka"
crate-type = ["rlib", "cdylib"]

[profile.release]     # shrink executable size
opt-level = "z"
lto = true
# panic = "abort"
strip = true
codegen-units = 1

[profile.dev]         # to reasonably improve productivity
opt-level = 1         # slightly optimize
lto = false           # disable link-time optimizations
# strip = "debuginfo" # reduce size
incremental = true

[features]
default = []
pyo3 = ["dep:pyo3"]

[dependencies]
html5ever = "^0.27"
markup5ever_rcdom = "^0.3"
pyo3 = { version = "^0.24", features = ["extension-module"], optional = true }

[dev-dependencies]
criterion = "^0.5"
maturin = "1"

[[example]]
name = "trial"
path = "examples/trial.rs"

[[bench]]
name = "benchmark"
harness = false
