[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "mdka"
version = "1.3.0"

requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
