[package]
name        = "mdka-cli"
version = "2.0.3"
edition     = "2024"
description = "CLI executable for mdka – a HTML to Markdown converter"
license     = "Apache-2.0"
readme      = "../README.md"
repository  = "https://github.com/nabbisen/mdka-rs"

[[bin]]
name = "mdka"
path = "src/main.rs"

[dependencies]
mdka = { workspace = true }
