[package]
name        = "mdka-node"
version = "2.1.3"
edition     = "2024"
description = "Node.js bindings for mdka – a HTML to Markdown converter"
repository  = "https://github.com/nabbisen/mdka-rs"
license     = "Apache-2.0"

[lib]
crate-type = ["cdylib"]
name       = "mdka_node"

[dependencies]
mdka        = { workspace = true }
napi        = { version = "=3.8.4", features = ["napi4", "async"] }
napi-derive = "=3.5.3"
tokio       = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
napi-build = "=2.3.1"
