[package]
name        = "mdka-python"
version = "2.0.0"
edition     = "2024"
description = "Python bindings for mdka – HTML to Markdown converter"
repository  = "https://github.com/nabbisen/mdka-rs"
license     = "Apache-2.0"

[lib]
name       = "mdka_python"
crate-type = ["cdylib"]

[dependencies]
mdka  = { path = "..", default-features = true }
pyo3  = { version = "0.28", features = ["extension-module"] }
rayon = "1"
