[build-system]
requires      = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name            = "mdka"
version = "2.0.3"
description     = "A HTML to Markdown converter that balances conversion quality with runtime efficiency written in Rust"
readme          = "README.md"
license         = "Apache-2.0"
requires-python = ">=3.8"
keywords        = ["html", "markdown", "converter"]
classifiers     = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: Apache Software License",
]

[tool.maturin]
# Rust で生成されるネイティブモジュール名
module-name  = "mdka.mdka_python"
# Python パッケージのソースディレクトリ
python-source = "."
manifest-path = "Cargo.toml"
python-packages = ["mdka"]
